[tool.poetry]
name = "finalyze"
version = "0.1.0"
description = ""
authors = ["bk <codesage@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
plotly = "^5.13.0"
numpy = "^1.24.2"
alpha-vantage = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
